--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 .game {
-  width: 1500px;
-  height: 300px;
-  border: 1px solid black;
+  width: 1000px;
+  height: 325px;
+  border: 1px solid rgb(110, 113, 110);
   margin: auto;
+  background-color: rgb(204, 207, 204);
 }
 
 #dino {
@@ -11,11 +12,11 @@
   background-image: url(img/trex.png);
   background-size: 150px 150px;
   position: relative;
-  top: 170px;
+  top: 175px;
 }
 
 .jump {
-  animation: jump 0.3s linear;
+  animation: jump 0.4s linear;
 }
 
 @keyframes jump {
@@ -41,7 +42,7 @@
   height: 70px;
   position: relative;
   top: 110px;
-  left: 1180px;
+  left: 100px;
   background-image: url("img/cactus.png");
   background-size: 50px 70px;
   animation: block 2s infinite linear;
@@ -49,9 +50,17 @@
 
 @keyframes block {
   0% {
-    left: 1300px;
+    left: 1000px;
   }
   100% {
     left: -50px;
   }
+}
+
+button {
+  width: 500px;
+  height: 50px;
+  color: white;
+  background-color: black;
+  border-radius: 20px;
 }
