--- a/styles.css
+++ b/styles.css
@@ -156,10 +156,25 @@
     }
 }
 
-button {
+.btn {
     width: 500px;
     height: 50px;
     color: white;
     background-color: black;
     border-radius: 20px;
+    cursor: pointer;
+}
+
+.score_now {
+    text-align: center;
+}
+
+.score_now div {
+    flex-basis: 100px;
+    text-align: center;
+}
+
+.score_now div p {
+    font-size: 60px;
+    margin-bottom: -14px;
 }
